syntax = "proto3";

option go_package = "github.com/cuongnd9/go-grpc/pb";

package TodoService;

message ToDo {
  int64 id = 1;
  string title = 2;
  string description = 3;
}

message CreateRequest {
  string api = 1;
  ToDo toDo = 2;
}

message CreateResponse {
  string api = 1;
  int64 id = 2;
}

message ReadRequest {
  string api = 1;
  int64 id = 2;
}

message ReadResponse {
  string api = 1;
  ToDo toDo = 2;
}

message UpdateRequest {
  string api = 1;
  ToDo toDo = 2;
}

message UpdateResponse {
  string api = 1;
  int64 updated = 2;
}

message DeleteRequest {
  string api = 1;
  int64 id = 2;
}

message DeleteResponse {
  string api = 1;
  int64 deleted = 2;
}

message ReadAllRequest {
  string api = 1;
}

message ReadAllResponse {
  string api = 1;
  repeated ToDo toDos = 2;
}
