syntax = "proto3";

import "todo-message.proto";

package TodoService;

service ToDoService {
  rpc Create (CreateRequest) returns (CreateResponse) {}
  rpc Read (ReadRequest) returns (ReadResponse) {}
  rpc Update (UpdateRequest) returns (UpdateResponse) {}
  rpc Delete (DeleteRequest) returns (DeleteResponse) {}
  rpc ReadAll (ReadAllRequest) returns (ReadAllResponse) {}
}
